# mirror-agent

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  langgraph.json  obsidian_docs.json  pyproject.toml  rename_collection.py  requirements.txt  stop_monitor.sh  synthetic_qa_dataset.json  test_chroma.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
chroma/: chroma.sqlite3
chroma_db/: chroma.sqlite3
docs/: braintrust.md  chroma.md  contextual_retrieval.txt  jxnl_co_writing_2024_05_22_systematically-improving-your-rag__docs.md  mem0ai-llm-summary.md  mem0ai-mem0.txt  o1_architecture.md  pinecone_langchain.md  project_plan.md  weave-docs_wandb_ai__docs.md
prompts/: add_chroma_retriever.md  o1_coding_prompt_template.md  o1_reasoning_node_template.md  reflection_step.md
scripts/: start_monitor.sh
src/retrieval_graph/: configuration.py  graph.py  index_graph.py  mem0_client.py  prompts.py  retrieval.py  state.py
tests/: test_mem0_integration.py
tools/: deepseek_r1.py  docs_generator.py  gemini_2_flash_thinking.py
utils/: check_collection.py  check_collection_raw.py  chroma_utils.py  clear_pinecone_index.py  create_code_snapshot.py  eval_rag_pipeline.py  extract_md_from_json.py  file_watcher.py  gcp_logging.py  generate_synthetic_questions.py  obsidian_doc_util.py  obsidian_indexer.py  obsidian_monitor.py  test_chroma.py  test_query.py
